--- a/.env
+++ b/.env
@@ -15,6 +15,6 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=c01e4725458750d9a4b5fceabfef7203
 ###< symfony/framework-bundle ###
